--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,7 @@
 TODOS:
 - if month start on saturday or sundat, there is one more week, and the calendar hide the "Next events" text.
-OK - Responsive
-OK - Change button txt: "ir al evento"
 - Events of several days
-- Parameter with data format: dd/mm/yyy
+
 - Timeago Plugin integration
 - option to work without a json. just html
-- How do you add events to your jQuery Event Calendar? .dminetti1228@yahoo.com mail of 28 dejunio
+- Add events to the jQuery Event Calendar
